# OpenQuant

./: .env.example  .gitignore  .task_progress  AGENTS.md  ARCHITECTURE.md  CACHE_IMPLEMENTATION.md  CHANGELOG.md  CLIENT_DEMO_SCRIPT.md  CONFIG_SYSTEM.md  EXECUTION_QUALITY.md  KELLY_IMPLEMENTATION.md  LINKEDIN_POST.md  MONITORING_IMPLEMENTATION.md  MTF_IMPLEMENTATION_SUMMARY.md  MTF_QUICK_START.md  ORDERBOOK_IMPLEMENTATION_SUMMARY.md  POLICIES.md  QUICKSTART.md  README.md  REGIME_ADAPTIVE_IMPLEMENTATION.md  RESEARCH_LOG.md  ROADMAP.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_NOTES.md  SETUP_STATUS.md  SHUTDOWN.md  START_ROBOT.bat  WEAKNESSES.md  debug_mt5.py  install.bat  install_deps.bat  install_deps.ps1  install_deps.py  launcher.pyw  main.py  mvp_robot.py  pyproject.toml  requirements.txt  requirements_no_pandasta.txt  (+8 more)
.streamlit/: config.toml
AppDir/: .DirIcon  AppRun  OpenQuant.desktop
configs/: MIGRATION_GUIDE.md  README.md  aapl_sma.yaml  aggressive.yaml  binance_btc_sma.yaml  default.yaml  eurusd_sma.yaml  production.yaml
data/: alerts_history.json  audit_trail.duckdb  backtest_results.json  circuit_breaker_state.json  crypto_results.json  diagnostic_report.json  diagnostic_reports.json  final_mr_results.json  genetic_best.json  genetic_population.json  hybrid_backtest_results.json  ml_backtest_results.json  ml_metrics.json  momentum_results.json  mr_backtest_results.json  mr_optimized_results.json  optimization_actions.json  paper_state.json  profitable_strategy_results.json  real_backtest_results.json  results.duckdb  risk_state.json  signals.csv  tca.duckdb  trailing_results.json  ultimate_backtest_results.json  ultra_selective_results.json
diagrams/: alerts_flow.mmd  architecture.mmd  guardrails_scheduler.mmd  mt5_fx_pipeline.mmd  offline_smoke.mmd  optimization_flow.mmd  paper_trading_flow.mmd  portfolio_ledger.mmd  risk_management.mmd  universe_research.mmd  validation_pipeline.mmd
docs/: regime_adaptive_strategy.md
examples/: monitoring_example.py  monitoring_integration.py
logs/: openquant.log.2025-11-25  openquant.log.2025-11-27
openquant/: __init__.py
optimization_results/: opt_EURUSD_H1.json
reports/: allocation_20251108_112959.json  allocation_20251108_113055.json  allocation_20251109_215206.json  allocation_20251109_225201.json  allocation_20251118_205130.json  allocation_20251118_220016.json  allocation_20251118_220332.json  allocation_20251118_220515.json  allocation_20251118_220623.json  allocation_20251118_220653.json  allocation_20251118_220749.json  allocation_20251118_220836.json  allocation_20251120_043832.json  allocation_20251120_050129.json  allocation_20251120_050613.json  (+1454 more)
robot/: __init__.py  (+14 more)
(+409 files in other folders)
