[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openquant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyyaml",
    "python-dotenv",
    "pytest",
    "yfinance",
    "ccxt",
    "matplotlib",
    "duckdb",
    "optuna",
    "streamlit",
    "pyinstaller",
    "plotly",
    "psutil",
    "statsmodels",
    "arch",
    "filterpy",
    "scipy",
    "hurst",
    "alpaca-py",
    "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["openquant*"]
exclude = ["tests*", "data*", "logs*", "reports*", "diagrams*", "AppDir*", "MagicMock*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "W",  # warnings
  "B",  # flake8-bugbear
  "I",  # isort
  "UP", # pyupgrade
]
ignore = [
  "E402",  # module-import-not-at-top-of-file (common in scripts adding repo root to sys.path)
]
exclude = [
  "AppDir/_internal/*",
]

[tool.ruff.lint.isort]
known-first-party = ["openquant"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = [
  "AppDir/_internal/",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
